--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "devDependencies": {
     "connect-livereload": "^0.6.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-less": "^1.4.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-open": "^0.2.3",
     "matchdep": "^1.0.1",
